[project]
name = "my_project"
version = "0.1.0"
description = ""
dependencies = [
    "autopep8==2.3.2",
    "flake8==7.3.0",
    "markdown-it-py==3.0.0",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "mypy==1.16.1",
    "mypy-extensions==1.1.0",
    "pathspec==0.12.1",
    "pycodestyle==2.14.0",
    "pyflakes==3.4.0",
    "pygments==2.19.2",
    "rich==14.0.0",
    "typing-extensions==4.14.0",
]
